--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,26 @@
-# For more information about build system see
+# For detailed information about the ESP-IDF build system, visit:
 # https://docs.espressif.com/projects/esp-idf/en/latest/api-guides/build-system.html
-# The following five lines of boilerplate have to be in your project's
-# CMakeLists in this exact order for cmake to work correctly
-cmake_minimum_required(VERSION 3.5)
+
+cmake_minimum_required(VERSION 3.16)
+
+set(PROJECT_NAME "iot_test")
+set(PROJECT_VERSION "1.0.0")
+
+set(CMAKE_C_STANDARD 11)
+set(CMAKE_C_STANDARD_REQUIRED ON)
+set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 include($ENV{IDF_PATH}/tools/cmake/project.cmake)
-project(IoT Test)
+
+project(${PROJECT_NAME})
+
+add_compile_options(
+    -Wall                
+    -Wextra              
+    -Wno-unused-parameter
+)
+
+add_compile_definitions(
+    PROJECT_VERSION="${PROJECT_VERSION}"
+)
