Cmake improvements, error handling, removing unused code and minimizing magic numbers

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,3 @@
-# For detailed information about the ESP-IDF build system, visit:
-# https://docs.espressif.com/projects/esp-idf/en/latest/api-guides/build-system.html
-
 cmake_minimum_required(VERSION 3.16)
 
 set(PROJECT_NAME "iot_test")
@@ -11,16 +8,30 @@ set(CMAKE_C_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-include($ENV{IDF_PATH}/tools/cmake/project.cmake)
+set(CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS_RELEASE} -Os -ffunction-sections -fdata-sections")
+set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -Os -ffunction-sections -fdata-sections")
 
-project(${PROJECT_NAME})
+set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -Wl,--gc-sections")
 
+include(CheckIPOSupported)
+check_ipo_supported(RESULT lto_supported OUTPUT lto_error)
+if(lto_supported)
+    set(CMAKE_INTERPROCEDURAL_OPTIMIZATION_RELEASE ON)
+endif()
+
+# Compiler warnings
 add_compile_options(
-    -Wall                
-    -Wextra              
+    -Wall
+    -Wextra
     -Wno-unused-parameter
+    $<$<CONFIG:Release>:-Wno-unused-function>
 )
 
 add_compile_definitions(
     PROJECT_VERSION="${PROJECT_VERSION}"
 )
+
+# Include ESP-IDF build system
+include($ENV{IDF_PATH}/tools/cmake/project.cmake)
+
+project(${PROJECT_NAME} VERSION ${PROJECT_VERSION})
