--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,9 +1,11 @@
+# Source files
 set(COMPONENT_SRCS
     "main.cpp"
     "hardware/led/led.cpp"
     "hardware/ultrasonic/hcsr04.cpp"
 )
 
+# Public include directories
 set(COMPONENT_INCLUDE_DIRS
     "."
     "hardware/led"
@@ -11,16 +13,22 @@ set(COMPONENT_INCLUDE_DIRS
     "config"
 )
 
+# Register component with ESP-IDF
 idf_component_register(
     SRCS ${COMPONENT_SRCS}
     INCLUDE_DIRS ${COMPONENT_INCLUDE_DIRS}
-    PRIV_INCLUDE_DIRS ${COMPONENT_PRIV_INCLUDEDIRS}
-
     REQUIRES 
-        driver          # GPIO and hardware drivers
+        driver
         esp_timer
 )
 
 target_compile_options(${COMPONENT_LIB} PRIVATE
     -Wno-unused-function
+    -fno-exceptions 
+    -fno-rtti 
+    -fmerge-all-constants  
 )
+
+if(CMAKE_BUILD_TYPE STREQUAL "Release")
+    target_compile_options(${COMPONENT_LIB} PRIVATE -g0)
+endif()
