Mail detection based on measured distance and states

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -3,6 +3,8 @@ set(COMPONENT_SRCS
     "main.cpp"
     "hardware/led/led.cpp"
     "hardware/ultrasonic/hcsr04.cpp"
+    "telemetry/distance/distance_telemetry.cpp"
+    "processor/distance/distance_processor.cpp"
 )
 
 # Public include directories
@@ -10,6 +12,8 @@ set(COMPONENT_INCLUDE_DIRS
     "."
     "hardware/led"
     "hardware/ultrasonic"
+    "telemetry/distance"
+    "processor/distance"
     "config"
 )
 
@@ -20,6 +24,7 @@ idf_component_register(
     REQUIRES 
         driver
         esp_timer
+        cjson
 )
 
 target_compile_options(${COMPONENT_LIB} PRIVATE
