--- a/main/idf_component.yml
+++ b/main/idf_component.yml
@@ -1,4 +1,3 @@
-# main/idf_component.yml
 dependencies:
-  idf: ">=5.0"          # require a compatible ESP-IDF
-  espressif/cjson: "^1" # what you already have
+  idf: ">=5.0"
+  espressif/cjson: "^1"
