--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,16 +2,15 @@ cmake_minimum_required(VERSION 3.16)
 
 set(PROJECT_NAME "iot_test")
 set(PROJECT_VERSION "1.0.0")
-
 set(CMAKE_C_STANDARD 11)
 set(CMAKE_C_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
-
 set(CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS_RELEASE} -Os -ffunction-sections -fdata-sections")
 set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -Os -ffunction-sections -fdata-sections")
-
 set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -Wl,--gc-sections")
+
+set(PARTITION_TABLE_CSV ${CMAKE_SOURCE_DIR}/partitions.csv)
 
 include(CheckIPOSupported)
 check_ipo_supported(RESULT lto_supported OUTPUT lto_error)
