Changing to laser sensor VL53LXX-V2: untested

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,7 +1,7 @@
 # Source files
 set(COMPONENT_SRCS
     "main.cpp"
-    "hardware/ultrasonic/hcsr04.cpp"
+    "hardware/laser/vl53lxx-v2.cpp"
     "telemetry/distance/distance_telemetry.cpp"
     "processor/distance/distance_processor.cpp"
     "telemetry/publisher/mqtt.cpp"
@@ -10,7 +10,7 @@ set(COMPONENT_SRCS
 # Public include directories
 set(COMPONENT_INCLUDE_DIRS
     "."
-    "hardware/ultrasonic"
+    "hardware/laser"
     "telemetry/distance"
     "processor/distance"
     "telemetry/publisher"
